[package]
name = "arrise_macro"
version = "0.0.0"
authors = ["melvdl <hansw533@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.58"

